syntax="proto3";
package services;
// option go_package="../services";

import "google/api/annotations.proto";
import "Model.proto";

enum ProdAres {
  A=0;
  B=1;
  C=2;
}
message ProdRequest {
    int32 prod_id=1;
    ProdAres prod_area=2;
}
message ProdResponse {
    int32 prod_stock=1;
}

message QuerySize {
  int32 size=1;   //页尺寸
}

message ProdResponseList {  //返回一堆库存列表，使用修饰符：repeated
    repeated ProdResponse prodres=1;
}

service ProdService {
  rpc GetProdStock (ProdRequest) returns (ProdResponse){
     option (google.api.http) = {
       get: "/v1/pprod/{prod_id}"
     };

  }
  rpc GetProdStocks (QuerySize) returns (ProdResponseList){}
  rpc GetProdInfo (ProdRequest) returns (ProdModel){}
}